# MarketAgent

./: .dockerignore  .gitignore  .replit  COMPLETION_SUMMARY.md  CRITICAL_DEPLOYMENT_FIXES.md  DEBUGGING_SESSION_REPORT.md  DEBUG_PUBLISH_FAILURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  Dockerfile  OAUTH_LOGIN_STATUS.md  PHASE1_IMPLEMENTATION.py  PHASE2_COMPLETION_SUMMARY.md  PHASE2_EXECUTION_SUMMARY.md  PHASE2_IMPLEMENTATION.py  PHASE2_PHASE3_STATUS.md  PHASE3_IMPLEMENTATION.py  PHASE4_IMPLEMENTATION.py  PRODUCTION_STATUS.md  Procfile  RUNBOOK_RESTART_AGENT.md  SYSTEM_HEALTH_STATUS.md  TEAM_COMMUNICATION_PACKAGE.md  activate_future_improvements.py  add_error_reset.py  agent_schedule.json  antifragile_streamlit.py  app.json  app.py  code_guardian_agent.py  code_review_output.txt  config.py  debug_data.py  demo_distressed_agents.py  deploy.sh  deployment_guide.md  deployment_health_check.sh  deployment_start.sh  distressed_main.py  fix_error_reset.py  (+22 more)
MarketIneffeciencyAIAgentFinal/: replit_scheduler.py
advisory_board/: __init__.py  engine.py  frameworks.py  personas.py
agents/: __init__.py  agent_coordinator.py  alt_data_signal_agent.py  arbitrage_finder_agent.py  bank_earnings_agent.py  base_agent.py  bond_stress_agent.py  builder_agent.py  code_guardian_agent.py  commodity_trend_agent.py  crypto_funding_rate_agent.py  crypto_prediction_agent.py  crypto_stablecoin_premium_agent.py  cta_flows_agent.py  daily_prediction_agent.py  dated_basis_agent.py  distressed_deal_evaluator_agent_enhanced.py  distressed_macro_gate_agent.py  distressed_property_agent.py  earnings_surprise_detector_agent.py  earnings_surprise_drift_agent.py  earnings_whisper_surprise_agent.py  equity_momentum_agent.py  geopolitical_risk_agent.py  greatest_trade_agent.py  heartbeat_agent.py  high_frequency_flow_analysis_agent.py  insider_trading_signal_agent.py  intraday_order_book_imbalance_agent.py  intraday_volatility_spike_agent.py  intraday_volume_spike_agent.py  (+16 more)
(+695 files in other folders)
