[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "ccxt>=4.5.0",
    "feedparser>=6.0.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.2",
    "numpy>=2.3.2",
    "openai>=2.14.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.65",
]
