[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "ccxt>=4.5.0",
    "feedparser>=6.0.12",
    "flask>=3.1.1",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.6",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.3.2",
    "oauthlib>=3.3.1",
    "openai>=2.14.0",
    "pandas>=2.3.1",
    "prometheus-client>=0.23.1",
    "pyarrow>=22.0.0",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.7",
    "requests>=2.32.4",
    "scikit-learn>=1.8.0",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.9",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.65",
]
